<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2B6CE"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Especialista.RegistroA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A2B6CE"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#A2B6CE"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn2regresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/monse"
                android:text="@string/regresar"
                android:textAlignment="center"
                android:textColor="#020202"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monse"
                android:gravity="center"
                android:text="@string/regi"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/monse"
        android:text="Usuario Alfa"
        android:textColor="#020202"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EBE8E1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EBE8E1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/monse"
                android:text="Nombre"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/reg2nom"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext2"
                android:ems="10"
                android:fontFamily="@font/monse"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/monse"
                android:text="Edad"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/reg2edad"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext2"
                android:ems="10"
                android:fontFamily="@font/monse"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/monse"
                android:text="Correo Electronico"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/reg2mail"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext2"
                android:ems="10"
                android:fontFamily="@font/monse"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/monse"
                android:text="Usuario"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/reg2user"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext2"
                android:ems="10"
                android:fontFamily="@font/monse"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/monse"
                android:text="Contraseña"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/reg2pwd"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext2"
                android:ems="10"
                android:fontFamily="@font/monse"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/monse"
                android:text="Datos de Validación"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btn2reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/monse"
                android:text="@string/registr"
                android:textColor="@color/black"
                android:textSize="12dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>